# InGen

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  W01_PhysicalAI_PyDev_Landscape.md  W02_Algo_Benchmarks.ipynb  W03_Pipeline_Demo.ipynb  W04_Query_Benchmarks.ipynb  pyproject.toml  synthetic_data.csv
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b5f1cf1d1d6e_create_telemetry_schema.py
ingen_pydev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ingen_pydev/algo/: sliding_window.py  spatial_index.py  task_scheduler.py
ingen_pydev/db/: __init__.py  database.py  indexes.py  loader.py  models.py  queries.py
ingen_pydev/pipeline/: __init__.py  clean.py  features.py  ingest.py  output.py  run_pipeline.py  synthetic.py
outputs/: demo_cleaned_features.parquet  profile_validation_summary.json
outputs/w04_query_benchmarks/: baseline_indexes.csv  correctness_checks.csv  database_builds.csv  indexed_indexes.csv  latency_comparison.csv  query_plan_comparison.csv  raw_measurements.csv
tests/: test_db_loader.py  test_db_migrations.py  test_db_queries.py  test_db_schema.py  test_pipeline_clean.py  test_pipeline_features.py  test_pipeline_ingest.py  test_pipeline_output.py  test_scaffold.py  test_sliding_window.py  test_spatial_index.py  test_task_scheduler.py
weekly/: Wk-01-DevLog.md  Wk-02-DevLog.md  Wk-03-DevLog.md  Wk-04-DevLog.md
