[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingen-pydev"
version = "0.1.0"
description = "Public-safe Python development scaffold for Physical AI engineering modules."
requires-python = ">=3.11"
dependencies = ["pandas", "numpy", "pyarrow", "pandas-stubs"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.5",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingen_pydev*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["ingen_pydev", "tests"]